[tool.poetry]
name = "sleep_analysis"
version = "0.1.0"
description = "Empkins D04 Sleep Analysis"
authors = ["Empkins D04 Sleep Analysis <daniel.k.krauss@fau.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10.11"
nbstripout = "^0.6.1"
tpcp = "^0.13.0"
seaborn = "^0.11.1"
fau-colors = "^1.2.0"
empkins-io = {path = "../empkins-io", develop = true}
optuna = "^3.0.3"
xgboost = "^1.6.2"
numpy = "1.23.5"
torch = "1.12.1"
greenlet = "2.0.1"
mesa_data_importer = {path="../mesa-data-importer", develop = true}
hrv-analysis = "^1.0.4"
biopsykit = "^0.9.0"
yasa = "^0.6.3"
shap = "^0.41.0"
debugpy = "1.6.6"


[tool.poetry.dev-dependencies]
ipympl = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true



[tool.poe.tasks]
_format_black = "black ."
_format_isort = "isort ."
format = { sequence = ["_format_black", "_format_isort"], help = "Format all files." }
lint = { cmd = "prospector", help = "Lint all files with Prospector." }
_check_black = "black . --check"
_check_isort = "isort . --check"
check = { sequence = ["_check_black", "_check_isort", "lint"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=sleep-analysis --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { script = "_tasks:task_update_version()" }
conf_jupyter = { cmd = "python -m ipykernel install --user --name sleep-analysis", help = "Add a new jupyter kernel for the project." }
conf_nbstripout = { cmd = "nbstripout --install", help = "Enable the nbstripout pre commit hook."}

remove_jupyter = { cmd = "jupyter kernelspec uninstall sleep-analysis", help = "Remove the project specific jupyter kernel."}
experiment = { script = "_tasks:task_new_experiment()", help = "Create the boilerplate for a new experiment in the experiment subfolder."}
